@@ -71,10 +71,11 @@ gchar *s = N_("This shows some help about this dialog");
 gchar *s = N_("Plugin properties");
 gchar *s = N_("Click here when you are done");
 gchar *s = N_("Run the plugin");
-gchar *s = N_("Start Plugin");
+gchar *s = N_("_Start Plugin");
 gchar *s = N_("Stop this plugin");
-gchar *s = N_("Stop Plugin");
-gchar *s = N_("Help about this dialog box");
+gchar *s = N_("S_top Plugin");
+gchar *s = N_("Show the configuration options for this plugin");
+gchar *s = N_("_Configure");
 gchar *s = N_("Plugins");
 gchar *s = N_("label67 (Plugin name)");
 gchar *s = N_("label68 (Plugin short description)");
