@@ -1314,6 +1314,11 @@ in the next release of this program.</label>
   <name>plugin_properties</name>
   <width>501</width>
   <height>414</height>
+  <signal>
+    <name>delete_event</name>
+    <handler>on_plugin_properties_delete_event</handler>
+    <last_modification_time>Sun, 04 Jun 2000 09:33:17 GMT</last_modification_time>
+  </signal>
   <title>Plugin properties</title>
   <type>GTK_WINDOW_TOPLEVEL</type>
   <position>GTK_WIN_POS_NONE</position>
@@ -1382,7 +1387,7 @@ in the next release of this program.</label>
 	    <handler>on_plugin_start_clicked</handler>
 	    <last_modification_time>Sat, 03 Jun 2000 21:01:29 GMT</last_modification_time>
 	  </signal>
-	  <label>Start Plugin</label>
+	  <label>_Start Plugin</label>
 	  <child>
 	    <padding>0</padding>
 	    <expand>True</expand>
@@ -1400,7 +1405,7 @@ in the next release of this program.</label>
 	    <handler>on_plugin_stop_clicked</handler>
 	    <last_modification_time>Sat, 03 Jun 2000 21:01:33 GMT</last_modification_time>
 	  </signal>
-	  <label>Stop Plugin</label>
+	  <label>S_top Plugin</label>
 	  <child>
 	    <padding>0</padding>
 	    <expand>True</expand>
@@ -1411,14 +1416,14 @@ in the next release of this program.</label>
 	<widget>
 	  <class>GtkButton</class>
 	  <name>plugin_help</name>
-	  <tooltip>Help about this dialog box</tooltip>
+	  <tooltip>Show the configuration options for this plugin</tooltip>
 	  <can_focus>True</can_focus>
 	  <signal>
 	    <name>clicked</name>
 	    <handler>on_plugin_help_clicked</handler>
 	    <last_modification_time>Sat, 03 Jun 2000 21:01:38 GMT</last_modification_time>
 	  </signal>
-	  <stock_button>GNOME_STOCK_BUTTON_HELP</stock_button>
+	  <label>_Configure</label>
 	  <child>
 	    <padding>0</padding>
 	    <expand>True</expand>
